[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "google-genai>=1.54.0",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-docx>=1.2.0",
    "sift-stack-py>=0.9.3",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.52.1",
]
